--- a/index.html
+++ b/index.html
@@ -31,8 +31,58 @@
     </header>
 
     <section class="container">
-      <h1 class="container__h1">Ven a Conocernos</h1>
-      <p class="container__p">Disfruta de una gran experiencia tomando un café o un té dentro de nuestra tienda o si prefieres puedes comprar en linea nuestros cafés para disfrutarlos en casa</p>
+      <div class="container__div1">
+        <h1 class="container__h1">Ven a Conocernos</h1>
+        <p class="container__p">Disfruta de una gran experiencia tomando un café o un té dentro de nuestra tienda o si prefieres puedes comprar en linea nuestros cafés para disfrutarlos en casa</p>
+      </div>
+
+
+    </section>
+
+    <section class="sectionnn">
+      <div class="box1">
+        <div class="box1__div1">
+          <h4 class="box1__h4">+50</h4>
+          <p class="box1__p1">Variedades de café</p>
+        </div>
+
+        <div class="box1__div2">
+          <h2 class="box1__h2">20</h2>
+          <p class="box1__p2">Países diferentes</p>
+        </div>
+        <div class="box1__div3">
+          <h3 class="box1__h3">+1000</h3>
+          <p class="box1__p3">Accesorios para hacer el mejor café</p>
+        </div>
+
+      </div>
+
+      <div class="box1__div4">
+
+      </div>
+    </section>
+
+    <section class="section1">
+
+      <div class="container__div2">
+        <img src="assets/images/img-2.png" alt="" class="container__img">
+      </div>
+
+      <div class="container__div11">
+        <img src="assets/images/img-3.png" alt="" class="container__img2">
+      </div>
+
+      <div class="container__div3">
+        <img src="assets/images/img-4.png" alt="" class="container__img3">
+      </div>
+
+      <div class="container2">
+
+      </div>
+
+      <div class="container3">
+
+      </div>
     </section>
 
 
